# ZennoMetrika-v3

./: .gitignore
Ads + Python/ADS Local API  (открытие, закрытие профиля)/: homework.py
Ads + Python/ADS Local API (создание и редактирование профиля)/: homework.py
Ads + Python/PW - get_by_role, вторичный поиск и фильтры/: homework.py
Ads + Python/PW - iFrame - сайты внутри  сайтов/: homework.py
Ads + Python/PW - locator, xpath, selector, get_by методы/: homework.py
Ads + Python/PW - Работа с cookie/: homework.py
Ads + Python/PW - взаимодействие с элементами/: homework.py
Ads + Python/PW - работа с расширениями (метамаск и другие)/: homework.py
Ads + Python/PW - сервисные методы локаторов/: homework.py
Ads + Python/Playwright - JS инъекции в CDP/: homework.py
Ads + Python/Playwright - page/: homework.py
Ads + Python/Playwright, подключение к ADS/: homework.py
Ads + Python/Xpath - поиск элементов/: homework.py
Ads + Python/cloudflare_turnstile_challange/: pyproject.toml
Ads + Python/cloudflare_turnstile_playwright/: README.md  pyproject.toml
Ads + Python/cloudflare_turnstile_request/: pyproject.toml
Ads + Python/cloudflare_turnstile_request/homeworks/: task_1_easy.py
Ads + Python/cloudflare_turnstile_request/lesson_files/: config.py  request.py
Ads + Python/hcaptcha/: README.md  pyproject.toml
Ads + Python/hcaptcha/homeworks/: task_3_hard.py
Ads + Python/hcaptcha/lesson_files/: config.py  get_callback.js  hcaptcha_script.js  inject_hcaptcha copy.js  inject_hcaptcha.js  main.py  render_patch.js
Ads + Python/recaptcha/: pyproject.toml
Ads + Python/recaptcha/lesson_files/: callback_finder.js  config.py  grass.py
Ads + Python/simple_captcha/: pyproject.toml
Ads + Python/simple_captcha/homeworks/: task_1_easy.py  task_2_medium.py  task_3_hard.py
Ads + Python/simple_captcha/lesson_files/: config.py  main.py
Ads + Python/simple_captcha_request/: README.md  pyproject.toml
Ads + Python/simple_captcha_request/homeworks/: task_1_easy.py
Ads + Python/simple_captcha_request/lesson_files/: config.py  main.py
Ads + Python/simple_captcha_request/solved_homeworks/: task_1_easy_solved.py
Ads + Python/Эмуляция мыши в PW.  Библиотека PyAutoGUI/: homework.py
Web3 + Python/Uniswap ч. 1/: homework.py
(+224 files in other folders)
